# scrape-projects

./: .gitignore  README.md  create_valorant_datasource_tinybird.py  pyproject.toml  scrape_valorant_daily.py  scrape_valorant_matches_daily.py
.github/workflows/: main.yml
scrape_projects/: tinybird.py
scrape_projects/api/: __init__.py  routes.py  schemas.py
scrape_projects/api/react-scrapes/: package-lock.json  package.json
scrape_projects/api/react-scrapes/src/: App.js
scrape_projects/valorant/: __init__.py  datasources.py  items.py  matches_in_range.sql  matches_per_day.sql
scrape_projects/valorant/configs/: vlr-gg-matches.yml
scripts/: run-app.sh
