[tool.poetry]
name = "scrape-projects"
version = "0.1.0"
description = ""
authors = ["Kobesani <Harold.Rockata@gmail.com>"]
readme = "README.md"
packages = [{include = "scrape_projects"}]

[tool.poetry.dependencies]
python = "^3.10"
parsel = "^1.7.0"
requests = "^2.28.1"
uplink = "^0.9.7"
pendulum = "^2.1.2"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
